--- a/server ⚙️/package.json
+++ b/server ⚙️/package.json
@@ -17,6 +17,7 @@
     "@types/mongodb": "^4.0.7",
     "apollo-server-express": "^3.10.2",
     "express": "^4.18.1",
+    "googleapis": "^108.0.0",
     "graphql": "^16.6.0",
     "lodash.merge": "^4.6.2",
     "mongodb": "^4.10.0",
