--- a/client 🎡/package.json
+++ b/client 🎡/package.json
@@ -23,13 +23,17 @@
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
+  "resolutions": {
+    "graphql": "^15.5.0",
+   "**/graphql": "^15.5.0" },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "codegen:schema": "npx apollo client:download-schema --endpoint=http://localhost:9000/api",
-    "codegen:generate": "npx apollo client:codegen --localSchemaFile=schema.json --includes=src/**/*.tsx --target=typescript"
+    "codegen:generate": "npx apollo client:codegen --localSchemaFile=schema.json --includes=src/lib/graphql/**/*.ts --globalTypesFile=./src/lib/graphql/globalTypes.ts --target=typescript"
   },
   "eslintConfig": {
     "extends": [
