--- a/server ⚙️/package.json
+++ b/server ⚙️/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/mongodb": "^4.0.7",
     "apollo-server-express": "^3.10.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "googleapis": "^108.0.0",
     "graphql": "^16.6.0",
@@ -25,6 +26,7 @@
     "typescript": "^4.8.3"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
     "@types/graphql": "^14.5.0",
