--- a/client 🎡/package.json
+++ b/client 🎡/package.json
@@ -3,37 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.6.9",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@ant-design/icons": "^4.6.2",
+    "@apollo/client": "^3.3.20",
+    "@apollo/react-hooks": "^4.0.0",
     "@types/graphql": "^14.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.62",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.12.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
-    "antd": "^4.23.3",
-    "apollo": "^2.34.0",
-    "graphql": "^15.8.0",
+    "@types/react-stripe-elements": "^6.0.4",
+    "antd": "^4.16.2",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^15.5.0",
+    "moment": "^2.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
-    "react-scripts": "^2.1.3",
-    "typescript": "^4.8.3",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "react-stripe-elements": "^6.1.2",
+    "typescript": "^4.3.2"
   },
-  "resolutions": {
-    "graphql": "^15.5.0",
-   "**/graphql": "^15.5.0" },
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "codegen:schema2": "apollo-codegen introspect-schema http://localhost:9000/api --output schema.json",
+    "codegen:generate2": "apollo-codegen generate src/**/*.ts --schema schema.json --target typescript --output ./src/lib/graphql/globalTypes.ts",
     "codegen:schema": "npx apollo client:download-schema --endpoint=http://localhost:9000/api",
-    "codegen:generate": "npx apollo client:codegen --localSchemaFile=schema.json --includes=src/lib/graphql/**/*.ts --globalTypesFile=./src/lib/graphql/globalTypes.ts --target=typescript"
+    "codegen:generate": "npx apollo client:codegen --localSchemaFile=schema.json --includes=src/**/*.ts --globalTypesFile=./src/lib/graphql/globalTypes.ts --target=typescript",
+    "prettier": "prettier --write ."
   },
   "eslintConfig": {
     "extends": [
@@ -53,5 +53,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:9000"
+  "proxy": "http://localhost:9000",
+  "volta": {
+    "node": "14.15.3",
+    "npm": "6.14.10"
+  }
 }
